2013-01-08  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlstyle.h:
	  - Fix CR style.

2013-01-08  Xavi Artigas  <xartigas@fluendo.com>

	* win32/vs10/libgstfluttml_sdk.vcxproj:
	  - Change the Windows subsystem to CONSOLE. This has no impact
	    at all, since this is a DLL and not an executable, but
	    prevents VS from closing the console after execution.

2013-01-08  Release Maker <nomail@fluendo.com>

	* configure.ac: Back to TRUNK.

=== release 0.10.3 ===

2013-01-08  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlstate.c: (gst_ttml_state_restore_attr_stack):
	  - Fix build for GLib versions < 2.36

2013-01-08  Xavi Artigas  <xartigas@fluendo.com>

	* src/Makefile.am:
	  - Fix dist-check

2013-01-08  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlstyle.c: (gst_ttml_style_get_text_decoration_name):
	  - Add missing case and fix gcc warning.

2013-01-08  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_attribute_parse),
	(gst_ttml_attribute_type_name):
	* src/gstttmlattribute.h:
	* src/gstttmlenums.h:
	* src/gstttmlstate.c: (gst_ttml_state_set_attribute),
	(gst_ttml_state_get_attribute):
	* src/gstttmlstyle.c: (gst_ttml_style_get_text_decoration_name),
	(gst_ttml_style_gen_pango):
	* src/gstttmlstyle.h:
	  - Support for the textDecoration styling attribute.

2013-01-08  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_attribute_parse),
	(gst_ttml_attribute_type_name):
	* src/gstttmlattribute.h:
	* src/gstttmlenums.h:
	* src/gstttmlstate.c: (gst_ttml_state_set_attribute),
	(gst_ttml_state_get_attribute):
	* src/gstttmlstyle.c: (gst_ttml_style_get_font_weight_name),
	(gst_ttml_style_gen_pango):
	* src/gstttmlstyle.h:
	  - Support for the fontWeight styling attribute.

2013-01-07  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_gen_buffer),
	(gst_ttmlparse_sax_characters):
	* src/gstttmlutils.c:
	* src/gstttmlutils.h: